fixed footer alignment

--- a/src/index.css
+++ b/src/index.css
@@ -559,6 +559,7 @@ Footer
   display: flex;
   flex-direction: column;
   padding-block: 1rem;
+  align-items: center;
 }
 .footer {
   color: var(--clr-white);
